about and news section

--- a/src/app/i18n/locales/en/header.json
+++ b/src/app/i18n/locales/en/header.json
@@ -1,7 +1,11 @@
 {
-    "languages": {
-      "est": "Estonian",
-      "en": "English",
-      "ru": "Russian"
-    }
+  "languages": {
+    "est": "Estonian",
+    "en": "English",
+    "ru": "Russian"
+  },
+  "menu": {
+    "news": "News",
+    "about": "About"
   }
+}
