--- a/src/app/i18n/locales/et/header.json
+++ b/src/app/i18n/locales/et/header.json
@@ -3,5 +3,9 @@
     "est": "Eesti keel",
     "en": "Inglise keel",
     "ru": "Vene keel"
+  },
+  "menu": {
+    "news": "Uudised",
+    "about": "Meist"
   }
 }
