--- a/src/app/i18n/locales/ru/header.json
+++ b/src/app/i18n/locales/ru/header.json
@@ -3,5 +3,9 @@
     "est": "Эстонский язык",
     "en": "Английский язык",
     "ru": "Русский язык"
+  },
+  "menu": {
+    "news": "Новости",
+    "about": "О нас"
   }
 }
